--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
-  "dependencies": { "@tanstack/react-query": "^5.59.20", "hono": "^4.6.9", "typescript": "^5.6.3" },
+  "name": "hono-query",
+  "version": "0.0.1",
+  "description": "generate query ",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsup",
+    "deploy": "npm publish",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.59.20",
+    "hono": "^4.6.9",
+    "typescript": "^5.6.3"
+  },
   "devDependencies": {
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "vitest": "^2.1.4"
   },
   "tsup": {
     "entry": [
@@ -11,7 +25,6 @@
     "sourcemap": true,
     "clean": true
   },
-  "scripts": {
-    "build": "tsup"
-  }
+  "author": "Laurent Lahmy",
+  "license": "ISC"
 }
