--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hono-query",
-  "version": "0.0.7",
+  "version": "0.0.10",
   "description": "generate query ",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup",
-    "deploy": "npm publish",
+    "publish": "bun run build && npm publish",
     "test": "vitest"
   },
   "dependencies": {
